<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_visible_fields_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/manage_visible_fields_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin">

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/prefix" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/first_name" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/middle_name" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/surname" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_suffix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/suffix" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/nickname" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_phone_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/phone_numbers" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_emails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/emails" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/addresses" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_ims"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/instant_messaging" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_structured_addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/structured_addresses"/>

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/events" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/notes" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_ringtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/ringtone" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/organization" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_websites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/websites" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/groups" />

        <org.fossify.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_fields_contact_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/contact_source" />

    </LinearLayout>
</ScrollView>
